--- a/app/src/main/res/menu/menu_add_task.xml
+++ b/app/src/main/res/menu/menu_add_task.xml
@@ -3,8 +3,8 @@
 
     <item
         android:id="@+id/action_add_task"
-        android:icon="@android:drawable/stat_sys_upload_done"
-        android:title="@string/action_add_task"
+        android:icon="@drawable/ic_action_accept"
+        android:title="@string/confirm"
         app:showAsAction="always" />
 
 </menu>
