--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:icon="@android:drawable/stat_sys_upload_done"
+        android:icon="@drawable/ic_action_new"
         android:id="@+id/action_add_task"
         android:title="@string/action_add_task"
         app:showAsAction="always" />
