--- a/app/src/main/res/layout/activity_select_location.xml
+++ b/app/src/main/res/layout/activity_select_location.xml
@@ -12,10 +12,12 @@
 
     <Button
         android:id="@+id/queryButton"
+        style="?attr/actionButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:text="@string/select_location"
-        android:visibility="gone" />
+        android:background="@color/colorAccent"
+        android:text="@string/confirm"
+        android:textColor="@color/colorAccentText" />
 
 </merge>
