--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -12,20 +12,26 @@
 
     <EditText
         android:id="@+id/tvTitle"
-        android:hint="@string/title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:hint="@string/title" />
 
     <EditText
         android:id="@+id/tvDescription"
-        android:hint="@string/description"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:hint="@string/description" />
+
+    <EditText
+        android:id="@+id/tvContacts"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/contacts" />
 
     <Button
         android:id="@+id/btSelectLocation"
-        android:text="@string/select_location"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="@string/select_location" />
 
 </LinearLayout>
