--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -29,6 +29,12 @@
         android:hint="@string/contacts" />
 
     <Button
+        android:id="@+id/btSelectDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/select_date" />
+
+    <Button
         android:id="@+id/btSelectLocation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
