fix button visibility, fix index out of bound exception

--- a/app/src/main/res/layout/activity_select_location.xml
+++ b/app/src/main/res/layout/activity_select_location.xml
@@ -18,6 +18,7 @@
         android:layout_gravity="bottom"
         android:background="@color/colorAccent"
         android:text="@string/confirm"
-        android:textColor="@color/colorAccentText" />
+        android:textColor="@color/colorAccentText"
+        android:visibility="gone" />
 
 </merge>
